tests/baselines/reference/usingDeclarations.8.errors.txt
tests/cases/conformance/statements/VariableStatements/usingDeclarations/usingDeclarations.8.ts(2,11): error TS1155: 'using' declarations must be initialized.


==== tests/cases/conformance/statements/VariableStatements/usingDeclarations/usingDeclarations.8.ts (1 errors) ====
    {
        using a;
              ~
!!! error TS1155: 'using' declarations must be initialized.
    }